--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <main>
         <!-- about section -->
-        <section id="about" class="py-5 d-flex align-items-center justify-content-center flex-column vh-100">
+        <section id="about" class="py-5 vh-md-100 d-flex align-items-center justify-content-center flex-column ">
             <div class="title position-relative d-flex justify-content-center align-items-center">
                 <h2 class="m-0 ">ABOUT</h2>
                 <h3 class="m-0 position-absolute">ABOUT</h3>
@@ -113,7 +113,7 @@
         </section>
 
         <!-- testimonial section -->
-        <section id="testimonial" class="text-center w-75 mx-auto py-5 vh-100">
+        <section id="testimonial" class="text-center w-75 mx-auto py-5 ">
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
