--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>DEV.NOUR</title>
 </head>
 
 <body>
@@ -84,7 +84,7 @@
 
     <main>
         <!-- about section -->
-        <section id="about" class="py-5 vh-md-100 d-flex align-items-center justify-content-center flex-column ">
+        <section id="about" class="py-3 d-flex align-items-center justify-content-center flex-column ">
             <div class="title position-relative d-flex justify-content-center align-items-center">
                 <h2 class="m-0 ">ABOUT</h2>
                 <h3 class="m-0 position-absolute">ABOUT</h3>
@@ -110,10 +110,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
 
         <!-- testimonial section -->
-        <section id="testimonial" class="text-center w-75 mx-auto py-5 ">
+        <section id="testimonial" class="py-3 text-center w-75 mx-auto ">
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -419,8 +420,10 @@
                 </div>
             </div>
         </section>
+
+
         <!-- contacts section -->
-        <section id="contacts" class="vh-100">
+        <section id="contacts">
             <div class="container py-4">
                 <div class="row">
                     <h2 class="text-center py-3">Get in Touch</h2>
