--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>DEV.NOUR</title>
+    <title>div.NOUR</title>
 </head>
 
 <body>
-
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top ">
         <div class="container">
-            <a class="navbar-brand" href="#">DEV.NOUR</a>
+            <a class="navbar-brand" href="#"><span class="text-danger">div</span>.NOUR</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -44,7 +43,7 @@
     </nav>
 
     <!-- home section -->
-    <header id="home" class="vh-100 d-flex align-items-center">
+    <header id="home" class="d-flex align-items-center">
         <div class="header-content ps-4 text-white">
             <h1 class="m-0">We Are Professional</h1>
             <p class="lead m-0 py-3">Developer, Graphics & Web Design</p>
@@ -85,7 +84,7 @@
     <main>
         <!-- about section -->
         <section id="about" class="py-3 d-flex align-items-center justify-content-center flex-column ">
-            <div class="title position-relative d-flex justify-content-center align-items-center">
+            <div class="title position-relative d-flex justify-content-center align-items-center ">
                 <h2 class="m-0 ">ABOUT</h2>
                 <h3 class="m-0 position-absolute">ABOUT</h3>
             </div>
@@ -114,7 +113,11 @@
         </section>
 
         <!-- testimonial section -->
-        <section id="testimonial" class="py-3 text-center w-75 mx-auto ">
+        <section id="testimonial" class="py-3 text-center w-75 mx-auto">
+            <div class="title position-relative d-flex justify-content-center align-items-center">
+                <h2 class="m-0 ">TESTIMONIAL</h2>
+                <h3 class="m-0 position-absolute">TESTIMONIAL</h3>
+            </div>
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -176,7 +179,11 @@
 
         <!-- courses section -->
         <section id="courses">
-            <ul class="nav-courses nav nav-pills mb-3 justify-content-center bg-primary bg-opacity-25 py-2 fw-medium"
+            <div class="title position-relative d-flex justify-content-center align-items-center py-3 ">
+                <h2 class="m-0 ">COURSES</h2>
+                <h3 class="m-0 position-absolute">COURSES</h3>
+            </div>
+            <ul class="nav-courses nav nav-pills my-3 justify-content-center bg-primary bg-opacity-25 py-2 fw-medium"
                 id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <button class="nav-link active" id="pills-all-courses-tab" data-bs-toggle="pill"
@@ -424,9 +431,13 @@
 
         <!-- contacts section -->
         <section id="contacts">
+            <div class="title position-relative d-flex justify-content-center align-items-center py-3 ">
+                <h2 class="m-0 ">CONTACT</h2>
+                <h3 class="m-0 position-absolute">CONTACT</h3>
+            </div>
             <div class="container py-4">
                 <div class="row">
-                    <h2 class="text-center py-3">Get in Touch</h2>
+                    <h2 class="text-center text-main py-3">Get in Touch</h2>
                     <div class="col-md-5 contacts-info">
                         <h3 class="fw-bolder">Contact Information</h3>
                         <p class="lead">Feel free to reach out for collaborations, mentoring opportunities, or just to
@@ -480,16 +491,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
